# NoteToSelfAgent

./: README.md  prompt - Copy.txt  prompt.txt  pyproject.toml
src/app/: __init__.py  config.py  file_io.py  graph.py  loop.py  main.py  ollama_client.py  prompts.py  schemas.py  state.py  tools.py  url_utils.py
tests/: test_config.py  test_file_io.py  test_graph.py  test_schemas.py  test_tools.py
